Versão com nuvens animadas e interface atualizada

--- a/static/index.html
+++ b/static/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <title>🌍 Intérprete Automático — Chat Bilíngue</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="/static/style.css">
   <style>
     body {
       font-family: 'Segoe UI', Arial, sans-serif;
@@ -137,7 +137,7 @@
     </div>
   </div>
 
-  <script src="script.js"></script>
+  <script src="/static/script.js"></script>
 
 </body>
 </html>
