Versão com nuvens animadas e interface atualizada

--- a/static/index.html
+++ b/static/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8" />
   <title>🌍 Intérprete Automático — Chat Bilíngue</title>
   <link rel="stylesheet" href="/static/style.css">
+  <link rel="icon" type="image/x-icon" href="/static/favicon.ico">
   <style>
     body {
       font-family: 'Segoe UI', Arial, sans-serif;
