--- a/static/index.html
+++ b/static/index.html
@@ -5,6 +5,7 @@
   <title>🌍 Intérprete Automático — Chat Bilíngue</title>
   <link rel="stylesheet" href="/static/style.css">
   <link rel="icon" type="image/x-icon" href="/static/favicon.ico">
+
   <style>
     body {
       font-family: 'Segoe UI', Arial, sans-serif;
@@ -14,17 +15,53 @@
       align-items: center;
       height: 100vh;
       margin: 0;
+      overflow: hidden;
     }
 
+    /* Container principal */
     .chat-box {
-      background: #fff;
+      background: rgba(255, 255, 255, 0.9);
       border-radius: 20px;
       width: 400px;
       height: 600px;
       display: flex;
       flex-direction: column;
       overflow: hidden;
-      box-shadow: 0 10px 40px rgba(0,0,0,0.2);
+      box-shadow: 0 10px 40px rgba(0,0,0,0.25);
+      position: relative;
+      z-index: 1;
+    }
+
+    /* Fundo animado — nuvens */
+    .cloud {
+      position: absolute;
+      background: white;
+      border-radius: 50%;
+      opacity: 0.8;
+      filter: blur(4px);
+      z-index: 0;
+      animation: float 60s linear infinite;
+    }
+
+    .cloud:nth-child(1) {
+      width: 120px; height: 60px;
+      top: 10%; left: -150px;
+      animation-duration: 80s;
+    }
+    .cloud:nth-child(2) {
+      width: 160px; height: 80px;
+      top: 40%; left: -200px;
+      animation-duration: 100s;
+    }
+    .cloud:nth-child(3) {
+      width: 130px; height: 70px;
+      top: 70%; left: -180px;
+      animation-duration: 90s;
+    }
+
+    @keyframes float {
+      0% { transform: translateX(-250px); }
+      100% { transform: translateX(600px); }
     }
 
     .chat-header {
@@ -33,6 +70,8 @@
       text-align: center;
       padding: 15px;
       font-weight: bold;
+      z-index: 2;
+      position: relative;
     }
 
     .chat-messages {
@@ -42,6 +81,7 @@
       background: #f1f5f9;
       display: flex;
       flex-direction: column;
+      z-index: 2;
     }
 
     .msg {
@@ -66,11 +106,18 @@
       border-bottom-left-radius: 4px;
     }
 
+    .system {
+      text-align: center;
+      color: #666;
+      font-size: 13px;
+    }
+
     .chat-input {
       display: flex;
       padding: 10px;
       background: #f9fafb;
       border-top: 1px solid #e5e7eb;
+      z-index: 2;
     }
 
     .chat-input input {
@@ -100,6 +147,8 @@
       background: #eef2ff;
       padding: 10px;
       text-align: center;
+      z-index: 2;
+      position: relative;
     }
 
     .lang-select select {
@@ -111,10 +160,13 @@
 </head>
 <body>
   <div class="chat-box">
+    <!-- Fundo de nuvens animadas -->
     <div class="cloud"></div>
     <div class="cloud"></div>
     <div class="cloud"></div>
+
     <div class="chat-header">🌍 Intérprete Bilíngue</div>
+
     <div class="lang-select">
       <label>Meu idioma:</label>
       <select id="myLang">
@@ -139,6 +191,5 @@
   </div>
 
   <script src="/static/script.js"></script>
-
 </body>
 </html>
