Versão com nuvens animadas e interface atualizada

--- a/static/index.html
+++ b/static/index.html
@@ -18,6 +18,15 @@
       overflow: hidden;
     }
 
+
+    .system {
+    text-align: center;
+    color: #64748b;
+    font-size: 13px;
+    
+    }
+
+
     /* Container principal */
     .chat-box {
       background: rgba(255, 255, 255, 0.9);
