--- a/static/index.html
+++ b/static/index.html
@@ -187,6 +187,7 @@
 </head>
 
 <body>
+  <div class="title">semfronteiras</div>
   <div class="chat-box">
     <!-- Fundo de nuvens animadas -->
     <div class="cloud"></div>
