--- a/static/index.html
+++ b/static/index.html
@@ -9,13 +9,101 @@
   <style>
     body {
       font-family: 'Segoe UI', Arial, sans-serif;
-      background: linear-gradient(135deg, #4f46e5, #3b82f6);
+      background: radial-gradient(circle at top center, #60a5fa 0%, #3b82f6 40%, #1e40af 100%);
       display: flex;
       justify-content: center;
       align-items: center;
       height: 100vh;
       margin: 0;
       overflow: hidden;
+      position: relative;
+    }
+
+    /* --- ANIMAÇÃO DO SOL E RAIOS --- */
+    .sun {
+      position: absolute;
+      top: -100px;
+      width: 400px;
+      height: 400px;
+      background: radial-gradient(circle, #fff9c4 0%, rgba(255, 255, 255, 0) 70%);
+      border-radius: 50%;
+      animation: sunGlow 6s ease-in-out infinite alternate;
+      z-index: 0;
+      filter: blur(50px);
+    }
+
+    @keyframes sunGlow {
+      0% { opacity: 0.7; transform: scale(1); }
+      100% { opacity: 1; transform: scale(1.1); }
+    }
+
+    /* --- TÍTULO FLUTUANTE --- */
+    .title {
+      position: absolute;
+      top: 40px;
+      width: 100%;
+      text-align: center;
+      font-size: 48px;
+      font-weight: 800;
+      color: #ffffff;
+      letter-spacing: 4px;
+      z-index: 5;
+      display: flex;
+      justify-content: center;
+      gap: 6px;
+      pointer-events: none;
+      overflow: hidden;
+    }
+
+    .title span {
+      display: inline-block;
+      position: relative;
+      text-shadow: 
+        0 0 15px rgba(255, 255, 255, 0.8),
+        0 0 40px rgba(173, 216, 230, 0.9),
+        0 0 60px rgba(30, 64, 175, 0.6);
+      animation: floatLetter 5s ease-in-out infinite;
+      transition: transform 0.3s ease, text-shadow 0.3s ease;
+      pointer-events: auto;
+      cursor: default;
+    }
+
+    @keyframes floatLetter {
+      0%, 100% { transform: translateY(0px) rotate(0deg); }
+      25% { transform: translateY(-6px) rotate(-3deg); }
+      50% { transform: translateY(3px) rotate(2deg); }
+      75% { transform: translateY(-4px) rotate(-1deg); }
+    }
+
+    .title span:hover {
+      transform: translateY(-20px) scale(1.2) rotate(3deg);
+      text-shadow:
+        0 0 25px rgba(255, 255, 255, 1),
+        0 0 60px rgba(255, 255, 150, 0.9),
+        0 0 100px rgba(255, 255, 200, 0.8);
+    }
+
+    /* --- REFLEXO DE LUZ --- */
+    .shine {
+      position: absolute;
+      top: 0;
+      left: -100%;
+      width: 80%;
+      height: 100%;
+      background: linear-gradient(
+        120deg,
+        rgba(255, 255, 255, 0) 0%,
+        rgba(255, 255, 255, 0.7) 50%,
+        rgba(255, 255, 255, 0) 100%
+      );
+      animation: shineMove 8s ease-in-out infinite;
+      z-index: 6;
+    }
+
+    @keyframes shineMove {
+      0%, 70% { transform: translateX(-120%); opacity: 0; }
+      75% { opacity: 1; }
+      100% { transform: translateX(120%); opacity: 0; }
     }
 
     /* Mensagem do sistema */
@@ -37,7 +125,7 @@
       overflow: hidden;
       box-shadow: 0 10px 40px rgba(0,0,0,0.25);
       position: relative;
-      z-index: 1;
+      z-index: 2;
     }
 
     /* Fundo animado — nuvens */
@@ -47,7 +135,7 @@
       border-radius: 50%;
       opacity: 0.8;
       filter: blur(4px);
-      z-index: 0;
+      z-index: 1;
       animation: float 60s linear infinite;
     }
 
@@ -79,7 +167,7 @@
       text-align: center;
       padding: 15px;
       font-weight: bold;
-      z-index: 2;
+      z-index: 3;
       position: relative;
     }
 
@@ -91,7 +179,7 @@
       background: #f1f5f9;
       display: flex;
       flex-direction: column;
-      z-index: 2;
+      z-index: 3;
     }
 
     .msg {
@@ -127,7 +215,7 @@
       padding: 10px;
       background: #f9fafb;
       border-top: 1px solid #e5e7eb;
-      z-index: 2;
+      z-index: 3;
     }
 
     .chat-input input {
@@ -157,7 +245,7 @@
       background: #eef2ff;
       padding: 10px;
       text-align: center;
-      z-index: 2;
+      z-index: 3;
       position: relative;
     }
 
@@ -187,7 +275,18 @@
 </head>
 
 <body>
-  <div class="title">semfronteiras</div>
+  <!-- Sol e raios -->
+  <div class="sun"></div>
+
+  <!-- Título flutuante interativo com brilho -->
+  <div class="title">
+    <span>s</span><span>e</span><span>m</span>
+    <span>f</span><span>r</span><span>o</span>
+    <span>n</span><span>t</span><span>e</span>
+    <span>i</span><span>r</span><span>a</span><span>s</span>
+    <div class="shine"></div>
+  </div>
+
   <div class="chat-box">
     <!-- Fundo de nuvens animadas -->
     <div class="cloud"></div>
